# NoExcuses_Productivity

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml
backend/: pyproject.toml
backend/sql/: 000_core_tables.sql  001_task_logs_unique_task_date.sql  002_rls_dev_policies.sql  003_productivity_features.sql  004_task_rest_days.sql  005_user_isolation.sql  006_task_kinds.sql  007_task_time_windows.sql  008_weekend_plans.sql  009_daily_for_date.sql
backend/src/noexcuses_backend/: __init__.py  auth_jwt.py  config.py  deps.py  main.py  schemas.py  supabase_client.py
backend/src/noexcuses_backend/routers/: api.py
backend/src/noexcuses_backend/services/: __init__.py  stats.py
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/api/: public-config.js
frontend/public/: noexcuses-bootstrap.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: config.ts  tasksApi.ts  types.ts
frontend/src/components/: ApiConfigBanner.tsx  AppErrorBoundary.tsx  AuthTraceHud.tsx  DeployConfigBlocker.tsx
frontend/src/context/: AuthContext.tsx  TimeFormatContext.tsx
frontend/src/lib/: apiAuthBridge.ts  authSession.ts  authTrace.ts  dailyTaskAppliesOnDay.ts  date.ts  heatmapAccent.ts  heatmapDates.ts  mockMonthlySeries.ts  publicEnv.ts  reviewDownload.ts  runtimePublicConfig.ts  sortTasks.ts  supabaseClient.ts  timeFormat.ts  timeWindow.ts  ui.ts  week.ts  weekend.ts  zenQuotes.ts
frontend/src/pages/: AuthPage.tsx  CalendarPage.tsx  HomePage.tsx  LegacyTaskRedirect.tsx  (+1 more)
(+22 files in other folders)
